<resources>
    <string name="app_name">alarm</string>
</resources>
